--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ after_success:
 - git config --global user.name "semantic-release (via TravisCI)"
 - git config --global user.email "semantic-release@travis"
 - pip install semantic-release
+- git status
 - semantic-release publish
