--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python: 2.7
 script:
-- true
+- python t.py
 after_success:
 - git config --global user.name "semantic-release (via TravisCI)"
 - git config --global user.email "semantic-release@travis"
 - pip install python-semantic-release
-- git checkout master 
+- git checkout master
 - semantic-release publish
